# alexkt

./: .gitignore  Cargo.toml  README.md  bink.hexpat
.cargo/: config.toml
src/: args.rs  base24.rs  bink.rs  bytesize.rs  cmd.rs  confirmation.rs  crypto.rs  error.rs  keydb.rs  license_agent.rs  logger.rs  main.rs  pidgen.rs  product_id.rs  serde_bigint.rs  system_directory.rs
src/base24/: error.rs
src/cmd/: activate_xp.rs  bink_info.rs  generate_confirmation.rs  generate_keys_pidgen_v2.rs  generate_keys_pidgen_v3.rs
src/confirmation/: activation_mode.rs  error.rs  installation_id.rs  math.rs
src/pidgen/: error.rs  v2.rs  v3.rs
src/product_id/: error.rs
