[package]
name = "alexkt"
description = "An open source tool for Windows 95, 98 and XP licensing"
version = "0.1.0"
authors = ["Alexander Sagen <alexander@sagen.me>"]
license = "AGPL-3.0-only"
edition = "2024"

[profile.dev]
# Unwind support needs at least VC8 (VS2005)
panic = "unwind"
# panic = "abort"
# eliminate dead code/imports
opt-level = 1

[profile.release]
# enable these two for smaller binaries
lto = "thin"
codegen-units = 1
debug = 2
# Unwind support needs at least VC8 (VS2005)
panic = "unwind"
# panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
log = "0.4"
env_logger = { version = "0.10", features = ["humantime"], default-features = false }
anyhow = "1.0"
editpe = "0.2"
winsafe = { version = "0.0.22", features = ["kernel"] }
num-integer = "0.1"
num-bigint = { version = "0.5", features = ["rand_0_10"] }
num-traits = "0.2"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.9", features = ["serde"] }
bitreader = "0.3"
sha1_smol = "1.0"
